[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
env_logger = "0.11"
rand = "0.9"
toml = "0.9"
#quiche = "0.24"
governor = "0.10"
tquic = { version = "1", features = ["h3"] }
serde_json = "1.0.145"



[features]
# Only needed if you want to compile the old file:
quiche = []