[package]
name = "core"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
env_logger = "0"
toml = "0"
governor = "0"
tquic = { version = "1", features = ["qlog", "h3"] }
serde_json = "1"
log = { version = "0", features = ["serde"] }
mio = { version = "1", features = ["net", "os-poll"] }
rustc-hash = "2"
slab = "0"
flate2 = "1"
chrono = { version = "0", default-features = false, features = ["clock"] }
