[package]
name = "core"
version = "1.0.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml = "0"
governor = "0"
tquic = "1"
serde_json = "1"
log = { version = "0", features = ["serde"] }
mio = { version = "1", features = ["net", "os-poll"] }
rustc-hash = "2"
slab = "0"
tracing-log = "0"
tracing-subscriber = { version = "0", features = ["fmt", "env-filter", "time"] }
tracing-appender = "0"